# multi-mcp

./: .gitignore  README.md  flake.nix  nixos-module.nix  pyproject.toml
.github/workflows/: docker-publish.yml
examples/nixos/: README.md  configuration.nix  flake.nix
src/multimcp/: mcp_client.py  multi_mcp.py
tests/: config_path_test.py
